[package]
name = "hb-d1c"
version = "0.1.0"
edition = "2021"
authors = ["SaavyLab LLC <jayson@saavylab.com>"]
description = "Type-safe SQL generator for Cloudflare D1 + Rust"
license = "MIT"
repository = "https://github.com/saavylab/hb"
readme = "README.md"

[[bin]]
name = "d1c"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
console = "0.16.1"
heck = "0.5.0"
inquire = "0.9.1"
notify = "8.2.0"
prettyplease = "0.2.37"
proc-macro2 = "1.0.103"
quote = "1.0.42"
regex = "1.12.2"
rusqlite = { version = "0.37.0", features = ["bundled", "column_decltype", "column_metadata"]}
serde = { version = "1.0", features = ["derive"] }
sqlparser = { version = "0.59.0", features = ["visitor"] }
syn = "2.0.110"
toml = "0.9.8"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3"
